fumon-web/deployment-loadbalancer-PreProd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fumon-web-preprod  
  namespace: preprod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fumon-web-preprod
  template:
    metadata:
      namespace: preprod
      labels:
        app: fumon-web-preprod
    spec:
      containers:
        - name: fumon-web-preprod
          image: eardevacr01.azurecr.io/fumon:preprod
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fumon-web-preprod
  namespace: preprod
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "ear-preprod-container1-subnet"
spec:
  type: LoadBalancer
  ports:
    - port: 8201
      targetPort: 80
      protocol: TCP
      name: http
    - port: 8202
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app: fumon-web-preprod
