fumon-web/deployment-loadbalancer-Prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fumon-web-prod  
  namespace: fumon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fumon-web-prod
  template:
    metadata:
      namespace: fumon
      labels:
        app: fumon-web-prod
    spec:
      containers:
        - name: fumon-web-prod
          image: earregistrya.azurecr.io/fumonwebprod
          volumeMounts:
          - name: azure-file-share
            mountPath: "/logs"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
      volumes:
      - name: azure-file-share
        persistentVolumeClaim:
          claimName: fumon
---
apiVersion: v1
kind: Service
metadata:
  name: fumon-web-prod
  namespace: fumon
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "ear-prod-container1-subnet"
spec:
  type: LoadBalancer
  # loadBalancerIP: 172.21.45.142
  ports:
    - port: 8101
      targetPort: 80
      protocol: TCP
      name: http
    - port: 8102
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app: fumon-web-prod
