fumon-web/deployment-loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fumon-web-dev  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fumon-web-dev
  template:
    metadata:
      labels:
        app: fumon-web-dev
    spec:
      containers:
      - name: fumon-web-dev
        image: eardevacr01.azurecr.io/fumon:dev
      ports:
        - containerPort: 8100
        - name: TITLE
          value: "Hello World Edenred Ar"
---
apiVersion: v1
kind: Service
metadata:
  name: fumon-web-dev 
spec:
  type: LoadBalancer
  ports:
  - port: 8100
  selector:
    app: fumon-web-dev
status:
  loadBalancer:
    ingress:
    - ip: 172.21.45.50
